--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
+### AppEngine template
+# Google App Engine generated folder
+appengine-generated/
 ### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -45,7 +47,6 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *,cover
-.hypothesis/
 
 # Translations
 *.mo
@@ -53,13 +54,6 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
-
-# Flask instance folder
-instance/
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
@@ -67,25 +61,13 @@ docs/_build/
 # PyBuilder
 target/
 
-# IPython Notebook
-.ipynb_checkpoints
+bower_components
+.idea
+venv
+node_modules
+css
+js
+images
+.sass-cache
 
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# dotenv
-.env
-
-# virtualenv
-venv/
-ENV/
-
-# Spyder project settings
-.spyderproject
-
-# Rope project settings
-.ropeproject
-
+# Created by .ignore support plugin (hsz.mobi)
